# small_projects

./: .gitignore  pyproject.toml
C++/cross_compiling/: android.md  linux.md  windows.md
C++/event_engine/: CMakeLists.txt  connection.cpp  connection.h  engine.cpp  engine.h  events.cpp  events.h  main.cpp  object.cpp  object.h
C++/exercises/: check_type.cpp  construct_methods.cpp  state_pattern.cpp
C++/gtest/: CMakeLists.txt  program.cpp  tests.cpp  tests.h
C++/network_client/: CMakeLists.txt  abstract_medium.h  client_socket.cpp  client_socket.h  doxy_conf  main.cpp  network_client.cpp  network_client.h
C++/network_client/network_client/: network_client.cpp  network_client.h
C++/network_server/: CMakeLists.txt  abstract_medium.cpp  abstract_medium.h  doxy_conf  main.cpp  main_page.md  network_server.cpp  network_server.h  server_connection.cpp  server_connection.h  server_listener.cpp  server_listener.h  server_socket.cpp  server_socket.h
C++/network_server/network_server/: network_server.cpp  network_server.h
C++/network_server/network_server/listener/: server_listener.cpp  server_listener.h
C++/network_server/network_server/socket/: server_socket.cpp  server_socket.h
C++/network_server/network_server/tools/: server_connection.cpp  server_connection.h
C++/presentation/: classes.cpp  lambda.cpp  others.cpp  smart_pointers.cpp  subject  templates.cpp
C++/proxy/: CMakeLists.txt  tcp_server.cpp  tcp_server.h
Docker/: Qt_cross_compilation_Dockerfile  Qt_lite_Dockerfile
Interview/C++/: TODO  rockwell_task.cpp  simens_solution.cpp  simens_task.cpp
JS/: index.html  page_manager.js  request_manager.js  script.js  server.js  triangle.js  view_manager.js
JS/api/: main.js  tests.js  validate-tools.js  validator.js
Python/ctypes/: cmult.c  ctypes_test.py  tasks.py
Python/cython/: cppmult.cpp  cython_example.pyx  cython_test.py  cython_wrapper.cpp  tasks.py
Python/decorators/: decorators.py  main.py
Python/django/marketplace/: .pre-commit-config.yaml  db.sqlite3  pyproject.toml  requirements.in  requirements.txt  (+1 more)
Python/pipelines/: pipeline.py
Python/pybind11/: pybind11_test.py  tasks.py
Python/song_book/: song_book.py
QML/drag_and_drop/: CMakeLists.txt
QML/drag_and_drop/Application/: CMakeLists.txt
QML/drag_and_drop/Application/qml/: Application.qrc  qmldir
QML/drag_and_drop/Application/source/: main.cpp
QML/drag_and_drop/drag_and_drop/: CMakeLists.txt  DraggingWidget.qml  Tile.qml  main.qml  qml.qrc
configs/fish/: config.fish
configs/ssh/: config
others/: motherboard_windows_product_key.sh
proxy/: CMakeLists.txt
wordpress/: custom.css  custom.js  move_comming_events_to_past_events.php
(+11 files in other folders)
